[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"

[dependencies]
 gstd = { git = "https://github.com/gear-tech/gear.git", features = ["debug"] }

[build-dependencies]
 gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git" }

[dev-dependencies]
 gtest = { git = "https://github.com/gear-tech/gear.git" }
